--- a/call/index.html
+++ b/call/index.html
@@ -16,7 +16,7 @@
   
 </head>
 
-<body id="index">
+<body id="index" class="bg-gradient">
 
   <!-- <div id="loader">
     <div class="container h-100 d-flex align-items-center justify-content-center">
@@ -39,27 +39,60 @@
       <a class="navbar-logo" href="#"><img class="img-fluid" src="../img/logo-white.png"/></a>
     </div>
   </nav>
-
+  <section class="page-section d-flex h-100">
+      <div id="call-wrapper" class="container d-flex justify-content-center align-items-center">
+        <div class="row">
+          <div class="col-8 mx-auto text-center">
+            <div class="call-loading d-none">
+              <h4 class="text-light">
+                Estamos preparando su llamada.<br/>
+                <span class="font-weight-light">
+                  Una persona de nuestro equipo estará
+                  contigo en instantes.
+                </span>
+              </h4>
+            </div>
+            <div class="call-error d-none">
+              <h4 class="text-light">
+                Su dispositivo no es compatible con Oasis Call.<br/>
+                <span class="font-weight-light">
+                  Una persona de nuestro equipo se pondrá en contacto contigo telefónicamente para coordinar el llamado.
+                </span>
+              </h4>
+            </div>
+            <div id="call-jitsi" class="rounded embed-responsive embed-responsive-16by9"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- JavaScript -->
   <script src="../vendor/jquery/jquery.min.js"></script>
-  <!-- <script src="../vendor/browser-detect.js"></script> -->
+  <script src="../vendor/mobile-detect.min.js"></script>
   <script src='https://meet.jit.si/external_api.js'></script>
   <script>
-      window.root = '/oasis-jitsi';
+      if (BrowserDetect.browser === 'Safari' && BrowserDetect.version < 6) {
+        $('.call-error').removeClass('d-none');
+      }
+      else {
+        $('.call-loading').removeClass('d-none');
+      }
+
+      window.root = '/oasiscall';
       var domain = "meet.jit.si";
       var meetingName = "oasiscall" + window.location.href.split('#')[1];
       var options = {
         roomName: meetingName,
         width: "100%",
         height: "100%",
-        parentNode: undefined,
+        parentNode: document.querySelector('#call-jitsi'),
         configOverwrite: {
             disableDeepLinking: true,
         },
         interfaceConfigOverwrite: {
           LANG_DETECTION: true,
           filmStripOnly: false,
-          TOOLBAR_BUTTONS: ['microphone', 'camera', 'hangup', 'tileview'],
+          TOOLBAR_BUTTONS: ['microphone', 'camera'],
           SHOW_JITSI_WATERMARK: false,
           JITSI_WATERMARK_LINK: 'https://jitsi.org',
           SHOW_WATERMARK_FOR_GUESTS: false,
@@ -71,7 +104,7 @@
       var api = new JitsiMeetExternalAPI(domain, options);
         
       api.addListener('participantJoined', () => {
-        $('#loader').remove();
+        $('#call-wrapper .call-jitsi').addClass('joined');
       });
       api.addListener('participantLeft', () => {
         window.location.href = window.root
