--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
+          <div id="non-compatible" class="alert alert-danger d-none">
+            ⚠ Tu dispositivo no es compatible con nuestra tecnología.
+            Podemos llamarte telefónicamente o bien te recomendamos <a href="https://browser-update.org/es/update.html?force_outdated=true" target="_blank">actualizar tu navegador</a>
+          </div>
           <form class="w-100" id="call-form">
             <div class="form-group mc-form-group-EMAIL">
                 <input type="hidden" name="EMAIL" placeholder="Email">
@@ -70,17 +74,17 @@
             <div class="form-group mc-form-group-PHONE">
               <input class="form-control rounded-pill" type="number" name="PHONE" placeholder="Ingresá tu Teléfono" required>
               <div class="mt-1 text-light mc-error"></div>
-          </div>
+            </div>
             <div class="form-group mc-form-group-MEETINGID">
               <input type="hidden" name="MEETINGID" placeholder="Meeting ID" value="">
               <div class="mc-error"></div>
             </div>
             <div class="g-recaptcha d-flex justify-content-center" data-sitekey="6LcHdQAVAAAAADh6kP8JTWOThtzbpgctasOwsfRB"></div>
+            <p class="pt-3 text-muted font-italic small m-0">En caso de caducar la llamada usaremos tus datos para contactarnos.</p>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-success rounded-pill mx-auto" id="submit-call">Ingresar a la llamada</button>
-          <p class="text-muted">En caso de caducar la llamada usaremos tus datos para contactarnos.</p>
         </div>
       </div>
     </div>
@@ -198,7 +202,7 @@
   <script src="vendor/swiper/swiper.min.js"></script>
   <script src='vendor/jquery-mailchimp.js'></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="vendor/mobile-detect.min.js"></script>
   <script src="js/magic.js"></script>
-
 </body>
 </html>
