--- a/call/index.html
+++ b/call/index.html
@@ -105,6 +105,7 @@
           disableDeepLinking: true,
       },
       interfaceConfigOverwrite: {
+        DISPLAY_WELCOME_PAGE_CONTENT: false,
         LANG_DETECTION: true,
         filmStripOnly: false,
         TOOLBAR_BUTTONS: ['microphone', 'camera'],
