--- a/call/index.html
+++ b/call/index.html
@@ -110,8 +110,8 @@
         remoteVideoMenu: {
           disableKick: true
         },
-        brandingDataUrl: 'https://tremendoagency.github.io/oasiscall/jitsi-branding.json',
-      }
+        brandingDataUrl: 'https://tremendoagency.github.io/oasiscall/jitsi-branding.json'
+      },
       interfaceConfigOverwrite: {
         DISPLAY_WELCOME_PAGE_CONTENT: false,
         LANG_DETECTION: true,
