--- a/call/index.html
+++ b/call/index.html
@@ -90,7 +90,7 @@
 
     var navigation = new Swiper('#call-slider', {
       speed: 1000,
-      initialSlide: 2
+      initialSlide: 1
     });
 
     window.root = '/oasiscall';
@@ -129,6 +129,7 @@
       
     api.addListener('participantJoined', () => {
       navigation.slideTo(2);
+      $('.leftwatermark').hide();
     });
     api.addListener('participantLeft', () => {
       navigation.slideTo(3);
