--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="modal-body">
           <div id="non-compatible" class="alert alert-danger d-none">
             ⚠ Tu dispositivo no es compatible con nuestra tecnología.
-            Dejanos tus datos y te llamaremos telefónicamente o bien te recomendamos <a href="https://browser-update.org/es/update.html?force_outdated=true" target="_blank">actualizar tu navegador</a>
+            Podés dejarnos tus datos para que te llamemos telefónicamente o bien ingresar desde una pc con <a href="https://www.google.com/intl/es-419/chrome/">Google Chrome</a>
           </div>
           <form class="w-100" id="call-form">
             <div class="form-group mc-form-group-EMAIL">
