--- a/call/index.html
+++ b/call/index.html
@@ -17,21 +17,6 @@
 </head>
 
 <body id="index" class="bg-gradient">
-
-  <!-- <div id="loader">
-    <div class="container h-100 d-flex align-items-center justify-content-center">
-      <div class="col-10 col-md-6">
-        <h2 class="text-light m-0 text-center">
-          Estamos preparando tu llamada.
-          <span class="font-weight-light">
-            <br/>
-            Una persona de nuestro equipo estará
-            contigo en instantes
-          </span>
-        </h2>
-      </div>
-    </div>
-  </div> -->
   
   <!-- Navigation -->
   <nav id="navbar">
@@ -75,6 +60,8 @@
               <span class="font-weight-light">
                 Esperamos que haya sido de tu agrado.
               </span>
+              <br/><br/>
+              <a class="btn btn-light rounded-pill text-secondary" href="/oasiscall">Generar una nueva llamada</a>
             </h4>
           </div>
         </div>
