--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <br/>
           para ayudarte
         </span>
-      </h1>
+      </h2>
     </div>
+
   </div>
   <!-- Navigation -->
   <nav id="navbar">
@@ -65,19 +66,19 @@
             </div>
             <div class="form-group mc-form-group-CONTACT">
               <input class="form-control rounded-pill" type="text" name="CONTACT" placeholder="Ingresá tu Email" required>
-              <div class="mt-1 text-light mc-error"></div>
+              <div class="mt-1 text-danger mc-error"></div>
             </div>
             <div class="form-group mc-form-group-FULLNAME">
                 <input class="form-control rounded-pill" type="text" name="FULLNAME" placeholder="Ingresá tu Nombre" required>
-                <div class="mt-1 text-light mc-error"></div>
-            </div>
-            <div class="form-group mc-form-group-PHONE">
-              <input class="form-control rounded-pill" type="number" name="PHONE" placeholder="Ingresá tu Teléfono" required>
-              <div class="mt-1 text-light mc-error"></div>
+                <div class="mt-1 text-danger mc-error"></div>
             </div>
             <div class="form-group mc-form-group-MEETINGID">
               <input type="hidden" name="MEETINGID" placeholder="Meeting ID" value="">
               <div class="mc-error"></div>
+            </div>
+            <div class="form-group mc-form-group-PHONE">
+              <input class="form-control rounded-pill" type="number" name="PHONE" placeholder="Ingresá tu Teléfono" required>
+              <div class="mt-1 text-danger mc-error"></div>
             </div>
             <div class="g-recaptcha d-flex justify-content-center" data-sitekey="6LcHdQAVAAAAADh6kP8JTWOThtzbpgctasOwsfRB"></div>
             <p class="pt-3 text-muted font-italic small m-0">En caso de caducar la llamada usaremos tus datos para contactarnos.</p>
@@ -110,7 +111,7 @@
             </div>
           </div>
           <div class="position-absolute w-100 actions d-flex justify-content-center">
-            <button class="slide-to btn rounded-pill btn-light text-secondary text-uppercase mx-1" data-slide="1">Ver Coachs</button>
+            <button class="slide-to btn rounded-pill btn-light text-secondary text-uppercase mx-1" data-slide="1">Ver Coaches</button>
             <button class="slide-to btn rounded-pill btn-light text-secondary text-uppercase mx-1" data-slide="2">Saber Más</button>
           </div>
         </div>
