--- a/team/claudia-roiz/index.html
+++ b/team/claudia-roiz/index.html
@@ -70,22 +70,8 @@
             <h2 class="text-econdary section-heading mt-2 mb-0">Claudia Roiz</h2>
             <p class="text-muted section-subheading"></p>
             <p class="text-dark">
-              Formación académica: Maestra jardinera , Psicomotricista , Terapeuta Corporal, EstimulaciónTemprana,.
-              <br/>
-              Estudios no formales: Bionergética, Expresión corporal, Yoga, Masajes ,Teatro, Psicología social, Psicoanálisis, Literatura, Kabalah, Terapias corporales, Meditación.
-              <br/><br/>
-              Trabajé: como psicomotricista y en educación por 20 años, 
-              dirigí tres Ferias de Inventos en el centro Municipal de exposiciones,
-              coordiné espectáculos multimedias, Eco Robot, Puerto Robot.
-              Creé el primer espacio de juego interactivo para niños y adolescentes en el Centro Municipal de exposiciones.
-              Coordiné la primer Feria Artesanal de Pilar.
-              Co-cree y dirigí la Gran Convocatoria. Evento espiritual en Capilla del Monte en diciembre de 2012.
-              Co-fundadora de la empresa Diseñobar, centro de diseño en Caba. 
-              Escribí una novela , una obra de teatro y participé en varias publicaciones con material propio.
-              <br/>
-              Trabajo desde hace 25 años en comunicación e imagen para grandes corporaciones.
-              <br/>
-              Expando lo que aprendí y aprendo cada día, compartiendo el sabor de lo bello en mi vida.
+              Co creadora y coordinadora general del proyecto oasis y oasis-call - creadora: feria de los inventos, eco robot, puerto robot, espectaculos educativos multimedia. co-credora feria artesanal de pilar. evento espiritual 21/12/2012. disenobar 25 anos. presidente softbar srl.<br/><br/>
+              Recorrido terapéutico, corporal,transpersonal desde hace más de 40 anos. expando y convido lo que aprendí y aprendo cada día.
             </p>
             <button class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger rounded-pill mt-2" data-toggle="modal" data-target="#formModal">Llamar Ahora</button>
           </div>
