--- a/team/manuela-sozio/index.html
+++ b/team/manuela-sozio/index.html
@@ -70,7 +70,8 @@
             <h2 class="text-secondary section-heading mt-2 mb-0">Manuela Sozio</h2>
             <p class="text-muted section-subheading"></p>
             <p class="text-dark">
-              Licenciada en Comunicación, con un posgrado en Marketing, tras 10 años de trabajar en el área de Comunicación y Marketing en distintos países (Argentina, EEUU y Brasil) para diferentes empresas, decidió reorientar su carrera para estar al servicio de las personas en contextos de aprendizaje individuales y grupales. Formada como Counselor y Coach Ontológica, y certificada en Benziger, PDA assessment y Point of You, actualmente trabaja como Co-facilitadora y Coach en MPH Partners, y es co-docente de la materia Consultoría Psicológica Aplicada en Holos. Además, acompaña a individuos en procesos de crecimiento personal.
+              Coach Ontológica y Counselor, certificada en Benziger, PDA assessment y Point of You, actualmente, trabaja como Coach, Facilitadora y Content Manager en MPH Partners, y es co-docente de la materia Consultoría Psicológica Aplicada en Holos.<br/><br/>
+              Licenciada en Comunicación y con un posgrado internacional en Marketing, tras 10 años de trabajar como Directora de Comunicación y Coordinadora de Marketing en distintos países (Argentina, EEUU y Brasil) para diferentes empresas, decidió abocarse a su verdadero propósito: estar al servicio de las personas en contextos de aprendizaje individuales y grupales.
             </p>
             <button class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger rounded-pill mt-2" data-toggle="modal" data-target="#formModal">Llamar Ahora</button>
           </div>
