--- a/team/maria-renee-martinez/index.html
+++ b/team/maria-renee-martinez/index.html
@@ -70,8 +70,9 @@
             <h2 class="text-secondary section-heading mt-2 mb-0">Maria Renee Martinez</h2>
             <p class="text-muted section-subheading"></p>
             <p class="text-dark">
-              Desde su formación en Relaciones Públicas, Recursos Humanos y Coaching Ontológico, transitó su camino profesional por empresas multinacionales, organizaciones sin fines de lucro, gobierno, y su propia consultora; tanto fuera como dentro del país
-              orienta sus servicios sobre la gestión y desarrollo de las personas para proyectos desafiantes y dinámicos donde vuelca su versatilidad y empatía en el acompañamiento de procesos de transformación.
+              A lo largo de mi carrera profesional tuve la oportunidad de acompañar y asesorar a las personas en su camino de transformación individual y profesional.<br/><br/>
+              Desde mi formación en Relaciones Públicas, Recursos Humanos y Coaching Ontológico, transité mi camino profesional por empresas multinacionales, organizaciones sin fines de lucro, gobierno, y mi propia consultora; tanto fuera como dentro del país.<br/><br/>
+              Siempre trabajé generando espacios de aprendizajes tanto personales como grupales. A través de mi experiencia, pude desarrollar empatía, y sentido de la escucha, cualidades que disfruto mucho de ponerlas al servicio de la gente que necesita un espacio de conversación y que busca alcanzar su bienestar.
             </p>
             <button class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger rounded-pill mt-2" data-toggle="modal" data-target="#formModal">Llamar Ahora</button>
           </div>
