--- a/team/mashenka-jacovella/index.html
+++ b/team/mashenka-jacovella/index.html
@@ -70,9 +70,8 @@
             <h2 class="text-econdary section-heading mt-2 mb-0">Mashenka Jacovella</h2>
             <p class="text-muted section-subheading"></p>
             <p class="text-dark">
-              Fundadora de Matriarcado tejidos una organización social de oficios y consciencia;  emprendedora, creó la primer feria de Artesanía y entretenimiento en Pilar, Bs As.
-              <br/><br/>
-              Formó parte de la creación y lanzamiento de la Fundación Columbia de energía y consciencia. Terapeuta;  canalizadora a través de registros akáshicos y conexión espontánea. Terapeuta del alma. Reiki por senso percepción y sonido. Artista. Creativa. Libre.
+              Artista de la vida, Creativa incansable. Arte terapeuta y terapeuta transpersonal, certificada en  Hooponopono, Reiki y Registros Akashicos.<br/><br/>
+              Con más de quince años de experiencia en talleres grupales y atención individual desde un abordaje sensible y perceptivo.
             </p>
             <button class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger rounded-pill mt-2" data-toggle="modal" data-target="#formModal">Llamar Ahora</button>
           </div>
